<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mensagem_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_inicial" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"/>

    <EditText
        android:id="@+id/campo_usario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/texto_usuario"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/texto_senha"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/botao_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_login" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imagem_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>